infra/k8s/reporting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-service
  namespace: invenflow
  labels:
    app: reporting-service
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: reporting-service
        version: "1.0"
    spec:
      containers:
        - name: reporting-service
          image: ghcr.io/pvtsonicbaka/microservice_inventory_management/reporting-service:latest
          ports:
            - containerPort: 3004
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 40
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: invenflow
spec:
  selector:
    app: reporting-service
  ports:
    - port: 3004
      targetPort: 3004
